# odbcshell

./: .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  configure.ac
ODBC Shell.xcodeproj/: project.pbxproj
build-aux/: autogen.sh
doc/: .gitignore  copyright.texi  odbcshell.doxyfile  odbcshell.texi
ports/freebsd/: Makefile  pkg-descr
src/: .gitignore  odbc-example.c  odbc-shell.c  odbcshell-cli.c  odbcshell-cli.h  odbcshell-commands.c  odbcshell-commands.h  odbcshell-exec.c  odbcshell-exec.h  odbcshell-odbc.c  odbcshell-odbc.h  odbcshell-odbcw.c  odbcshell-odbcw.h  odbcshell-options.c  odbcshell-options.h  odbcshell-parse.c  odbcshell-parse.h  odbcshell-print.c  odbcshell-print.h  odbcshell-profile.c  odbcshell-profile.h  odbcshell-script.c  odbcshell-script.h  odbcshell-signal.c  odbcshell-signal.h  odbcshell-variables.c  odbcshell-variables.h  odbcshell.c  odbcshell.h
